src/main/java/com/rawatech/grammar/VHDL.bnf
{
  parserClass="com.rawatech.parser.VHDLParser"

  psiClassPrefix="VHDL"
  psiImplClassSuffix="Impl"
  psiPackage="com.rawatech.psi"
  psiImplPackage="com.rawatech.psi.impl"

  elementTypeHolderClass="com.rawatech.psi.VHDLTypes"
  elementTypeClass="com.rawatech.psi.VHDLElementType"
  tokenTypeClass="com.rawatech.psi.VHDLTokenType"

  psiImplUtilClass="com.rawatech.psi.impl.VHDLPsiImplUtil"
  
  tokens = [
          IDENTIFIER = 'regexp:[a-zA-Z_][a-zA-Z0-9_]*'
          SIMPLE_NAME = 'regexp:[a-zA-Z]*'
          WHITE_SPACE = 'regexp:\s+'
          COMMENT = 'regexp:--.*'
      ]
}


VHDLFile ::= Definition*
Definition ::= entity_declaration

generic_clause ::=
generic ( generic_list ) ;

port_clause ::=
port ( port_list ) ;

entity_header ::=
[ generic_clause ]
[ port_clause ]


entity_declaration ::= entity IDENTIFIER is
    entity_header
[ begin
entity_statement_part ]
end [ entity ] [ IDENTIFIER ];
